# autoconf-demo

./: .gitignore  Makefile.am  README  configure.ac  hello.c
